fixtures/frontend/milestone-2/valid/domain-literal-suffixes/main.aivi
domain Duration over Int = {
    literal ms : Int -> Duration
    literal sec : Int -> Duration
    type Duration -> Duration -> Duration
    (+)
}

value delay : Duration = 250ms
value total = 250ms + 3sec

export delay
