fixtures/frontend/milestone-2/invalid/single-char-domain-literal-suffix/main.aivi
domain Distance over Int = {
    literal m : Int -> Distance
}

value walk = 3m
